--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,22 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+.bg-form {
+    background-color: rgba(0, 0, 0, 0.586);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+
+    .delete-form {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+.active {
+    display: block;
+}
