--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,3 @@
-
 @use './partials/variables'as *;
 
 @import '~bootstrap/scss/bootstrap';
@@ -89,17 +88,65 @@ header {
         position: relative;
         margin-bottom: 1.5rem;
 
-        input {
-            border: 1px solid $silver;
+        .label-input {
+            display: block;
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            transition: $transition;
+        }
+
+        .label-input-file {
+            display: block;
+            background-color: $orange;
+            color: $white;
+            width: fit-content;
+            text-wrap: nowrap;
             padding: 0.5rem 1rem;
+            border-radius: 5rem;
+        }
+
+        .input-file {
+            width: 0.1px;
+            height: 0.1px;
+            padding: 0;
+            border: none;
+        }
+
+        input {
+            display: block;
+            border: 1px solid $silver;
+            background-color: $linen;
+            padding: 0.5rem 1rem;
+            width: 100%;
+            height: 100%;
             color: $charcoal;
             outline: none;
             box-shadow: none;
+            border-radius: 0.25rem;
 
-            &:focus {
+            &:focus,
+            &:valid {
                 border-color: $orange;
+
             }
+
+            &:focus+.label-input,
+            &:valid+.label-input {
+                top: 0;
+                font-size: 0.875rem;
+                padding-inline: 0.25rem;
+                left: 0.5rem;
+                background-color: $linen;
+                color: $orange;
+            }
+
+
+
         }
+
+
     }
 
     .checkbox-wrapper {
@@ -134,6 +181,23 @@ header {
             }
 
         }
+    }
+
+    .btn.orange {
+        background-color: $orange;
+        border-color: $orange;
+        padding: 0.5rem 1rem;
+        border-radius: 5rem;
+        width: 100%;
+    }
+
+    .info {
+        text-align: center;
+        margin-top: 1rem;
+    }
+
+    .form-link {
+        color: $orange;
     }
 }
 
