FIX - show_item_view_fix

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,5 @@
 @use './partials/variables' as *;
-
+@use './partials/_show_item';
 @import '~bootstrap/scss/bootstrap';
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap');
