--- a/resources/scss/partials/_show_item.scss
+++ b/resources/scss/partials/_show_item.scss
@@ -1,40 +1,39 @@
 @use './variables' as *;
-@import '~bootstrap/scss/bootstrap';
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap');
 
-a {
-  text-decoration: none;
-  color: currentColor;
-}
 
-ul,
-li {
-  list-style: none;
-}
-
-body {
+.show {
   font-family: 'Outfit', sans-serif;
   min-height: 100vh;
+
+  a {
+    text-decoration: none;
+    color: currentColor;
+  }
+
+  ul,
+  li {
+    list-style: none;
+  }
 
   .wrapper {
     height: calc(100vh - $height-header);
     display: grid;
-    place-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
 
     .cards {
-      width: min(75%, calc(100% - 2rem));
       border-radius: 1rem;
       background-color: $linen;
       border: 1px solid $orange;
       padding: 2rem;
       color: $charcoal;
-      display: flex;
-      justify-content: space-between;
+
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: 3rem;
 
       .card.image-card {
-        width: 100%;
-        height: 100%;
+        aspect-ratio: 1;
         border: 1px solid $light-orange;
         border-radius: 0px;
         box-shadow: 0px 0px 10px 1px $light-orange;
@@ -42,19 +41,20 @@ body {
 
         img {
           border-radius: 0px;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
       }
 
       .card.description-card {
-        width: 100%;
-        height: 100%;
         border-radius: 0px;
         border: none;
         background: transparent;
 
         li {
           margin-top: 1rem;
-          font-size: 1.5rem;
+          font-size: 1rem;
         }
 
         .flags>* {
