--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,7 +1,6 @@
 @use './partials/variables'as *;
-
+@use './partials/orders'as *;
 @import '~bootstrap/scss/bootstrap';
-
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap');
 
 a {
