ADD - color variable

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -201,7 +201,7 @@ header {
             transition: $transition;
 
             &:hover {
-                background-color: $orange;
+                background-color: $orange-hover;
                 color: $white;
             }
         }
