--- a/resources/scss/partials/_dashboard.scss
+++ b/resources/scss/partials/_dashboard.scss
@@ -9,10 +9,6 @@
         color: currentColor;
     }
 
-    .sidebar {
-        padding: 0 10px;
-    }
-
     .dashboard-card-body {
         display: grid;
         grid-template-columns: repeat(1fr);
@@ -74,12 +70,19 @@
 
     .show-more {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
         font-size: 50px;
         color: rgb(255, 255, 255);
         cursor: pointer;
+
+
+        &:hover {
+            transition: 0.5s;
+            transform: scale(1.4);
+            color: $orange;
+        }
     }
 
     .statistic-img {
@@ -89,8 +92,7 @@
 }
 
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {}
+
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
@@ -128,15 +130,6 @@
                 font-size: 18px;
 
             }
-        }
-    }
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    .section-dashboard {
-        .sidebar {
-            width: 100%;
         }
     }
 }
