--- a/resources/scss/partials/_index_item.scss
+++ b/resources/scss/partials/_index_item.scss
@@ -19,6 +19,18 @@
 
 }
 
+.green-item {
+    &:hover {
+        border-color: green;
+    }
+}
+
+.orange-item {
+    &:hover {
+        border-color: $orange;
+    }
+}
+
 .card-item {
     position: relative;
     border: 1px solid $silver;
@@ -29,7 +41,6 @@
     transition: $transition;
 
     &:hover {
-        border-color: $orange;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     }
 
@@ -76,3 +87,68 @@
     }
 
 }
+
+.create.btn {
+    background-color: green;
+    border-color: green;
+    padding: 0.5rem 1rem;
+    border-radius: 5rem;
+    width: 100%;
+    &:hover {
+        background-color: transparent;
+        color: green;
+        border-color: currentColor;
+    }
+}
+
+
+.index-container {
+    .buttons {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        gap: 10px;
+    
+        @media (max-width: 768px) {
+          justify-content: space-between;
+        }
+    
+        .edit-btn,
+        .delete-btn {
+            // display: none;
+          padding: 0.15rem 0.85rem;
+          border: 2px solid $orange;
+          border-radius: 25px;
+          background-color: $orange;
+          color: white;
+          font-size: 1rem;
+          cursor: pointer;
+          transition: $transition;
+    
+          &:hover {
+            background-color: rgb(252, 128, 25, 25%);
+            color: $orange;
+          }
+        }
+    
+        .delete-btn {
+          background-color: red;
+          border: 2px solid red;
+    
+          &:hover {
+            background-color: rgb(255, 0, 0, 25%);
+            color: red;
+          }
+        }
+    
+        .edit-btn:active,
+        .delete-btn:active {
+          transform: scale(0.9);
+          transform: $transition_short;
+        }
+      }
+}
+
