--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -341,3 +341,21 @@ header {
         }
     }
 }
+
+#yearSelect {
+    border: 2px solid $orange;
+    border-radius: 999px;
+    padding: 5px;
+    font-weight: 600;
+    cursor: pointer;
+    color: $orange;
+    &:hover {
+        background-color: $orange;
+        color: white;
+
+        .yearOption {
+            background-color: white;
+            color: $orange;
+        }
+    }
+}
