--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -95,12 +95,29 @@ header {
 
 
 
+
 .app-body {
     display: flex;
+    flex-direction: row;
 
     .sidebar {
         width: 50px;
-        align-items: stretch;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        width: 100%;
+        z-index: 100;
+        background-color: $orange;
+        border-radius: 1rem 1rem 0 0;
+
+        .mobile {
+            flex-direction: row;
+            margin-bottom: 0;
+            align-items: center;
+            justify-content: space-around;
+        }
+
     }
 
     .app-content {
@@ -115,10 +132,12 @@ header {
         border-radius: 10px;
         padding: 10px 5px;
         text-align: center;
+        transition: $transition;
     }
 
 
-    .btn-sidebar:hover {
+    .btn-sidebar:hover,
+    .btn-sidebar.active {
         background-color: $orange;
         color: white;
     }
@@ -304,23 +323,59 @@ header {
 .bg-form {
     background-color: rgba(0, 0, 0, 0.586);
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     display: none;
     z-index: 999;
 
     .delete-form {
-        position: fixed;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        max-width: 400px;
+        background-color: $linen;
+        color: $charcoal;
+        padding: 2rem;
+        border-radius: 2rem;
+        border: 1px solid $orange;
+
+        .bg-form-buttons {
+            display: flex;
+            gap: 1rem;
+
+            .return-btn,
+            .delete-btn {
+                padding: 0.15rem 0.85rem;
+                border: 2px solid $orange;
+                border-radius: 25px;
+                background-color: $orange;
+                color: white;
+                font-size: 1rem;
+                cursor: pointer;
+                transition: $transition;
+
+                &:hover {
+                    background-color: $white;
+                    color: $orange;
+                }
+            }
+
+            .delete-btn {
+                background-color: red;
+                border: 2px solid red;
+
+                &:hover {
+                    background-color: $white;
+                    color: red;
+                }
+            }
+
+
+        }
     }
 }
 
 .active {
-    display: block;
+    display: flex;
 }
 
 #password-error {
@@ -332,7 +387,7 @@ header {
 }
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media (min-width: 768px) {
 
     .app-body {
 
@@ -344,6 +399,12 @@ header {
             top: 0;
             width: 200px;
             align-items: stretch;
+            background-color: $white;
+
+            .mobile {
+                flex-direction: column;
+                align-items: stretch;
+            }
         }
     }
 }
