--- a/resources/scss/partials/_dashboard.scss
+++ b/resources/scss/partials/_dashboard.scss
@@ -26,46 +26,69 @@
         border: 1px solid $orange;
         border-radius: 10px;
         overflow: hidden;
-        height: 40vh;
+        height: 20vh;
         grid-column: 1;
+
+        @media (min-width: 768px) {
+            height: 40vh;
+        }
 
         &::after {
             position: absolute;
             content: '';
             inset: 0;
-            mask-image: linear-gradient(to right, transparent 25%, black 70%);
-            backdrop-filter: blur(4px);
-            background: linear-gradient(to right, transparent 25%, rgba(0, 0, 0, 0.567) 70%);
+            // mask-image: linear-gradient(to right, transparent 25%, black 70%);
+            // backdrop-filter: blur(4px);
+            // background: linear-gradient(to right, transparent 25%, rgba(0, 0, 0, 0.567) 70%);
+            background: rgba($color: #000000, $alpha: 0.5);
+
+            @media (min-width: 992px) {
+                background: linear-gradient(to right, transparent 10%, rgba(0, 0, 0, 0.6) 90%);
+            }
         }
 
 
 
         .user-detail-card {
             position: absolute;
-            right: 0px;
-            bottom: 0px;
-            border-radius: 10px;
-            padding: 10px 10px 0 0;
-            display: none;
+            inset: 0;
+            padding: 2rem;
+            display: flex;
             align-items: center;
             justify-content: center;
             height: 100%;
-            text-align: left;
+            text-align: center;
             color: white;
             z-index: 10;
-            // backdrop-filter: blur(10px);
+
+            @media (min-width: 992px) {
+                justify-content: flex-end;
+                text-align: right;
+            }
+
+            ul {
+                padding: 0;
+                margin: 0;
+            }
+
         }
 
-        .buisness-name {
-            font-size: 25px;
-            text-transform: capitalize;
+        .business-name {
+            font-size: 2rem;
+            font-weight: 600;
+
+            @media (min-width: 992px) {
+                font-size: 3rem;
+            }
         }
 
         .user-detail {
             font-weight: 500;
-            font-size: 10px;
+            font-size: 16px;
 
         }
+
+
     }
 
     .shop-detail-card {
@@ -83,8 +106,12 @@
 
     .items-grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 0.75rem;
+
+        @media (min-width: 576px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
     }
 
     .item {
@@ -164,8 +191,8 @@
 
         .btn {
             display: flex;
-align-items: center;
-justify-content: center;
+            align-items: center;
+            justify-content: center;
 
             background-color: $orange;
             border: 1px solid $orange;
@@ -205,7 +232,7 @@ justify-content: center;
 
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
+@media (min-width: 992px) {
 
     .section-dashboard {
 
@@ -216,31 +243,7 @@ justify-content: center;
         .card-img {
             grid-column: 1/3;
 
-            .user-detail-card {
-                position: absolute;
-                // top: 10px;
-                right: 0px;
-                bottom: 0px;
-                padding: 10px 10px;
-                border-radius: 10px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: 100%;
-                text-align: right;
 
-            }
-
-            .buisness-name {
-                font-size: 3rem;
-                font-weight: 600;
-            }
-
-            .user-detail {
-                font-weight: 500;
-                font-size: 18px;
-
-            }
         }
     }
 }
